Décret N°2005-623 Du 30 Mai 2005 - Art. 1 () Jorf 31 Mai 2005
NOR: INTE0500140D
Voir sur Legifrance: http://www.legifrance.gouv.fr/affichTexte.do?cidTexte=JORFTEXT000000444391

--- a/Code Général Des Collectivités Territoriales/Partie Réglementaire/Premiere Partie/Livre IV/Titre II/Article D1424-32-10.md
+++ b/Code Général Des Collectivités Territoriales/Partie Réglementaire/Premiere Partie/Livre IV/Titre II/Article D1424-32-10.md
@@ -20,12 +20,12 @@ la notification de l'arrêté attributif.
 III. - Des acomptes, n'excédant pas au total 80 % du montant prévisionnel de la
 subvention, peuvent être versés en fonction de l'avancement de l'opération, au
 vu des pièces justificatives des paiements effectués par les services
-départementaux d'incendie et de secours.
+départementaux d'incendie et de secours ou par la commune de Marseille.
 
 IV. - Le solde de la subvention est versé après transmission des pièces
 justificatives des paiements effectués par l'établissement public qui doivent
 être accompagnées d'un certificat signé par le président du conseil
-d'administration attestant de l'achèvement de l'opération ainsi que de la
-conformité de ses caractéristiques par rapport à l'arrêté attributif et
-mentionnant le coût final de l'opération ainsi que ses modalités définitives de
-financement.
+d'administration ou par le maire de Marseille attestant de l'achèvement de
+l'opération ainsi que de la conformité de ses caractéristiques par rapport à
+l'arrêté attributif et mentionnant le coût final de l'opération ainsi que ses
+modalités définitives de financement.
