Décret N°2007-1339 Du 11 Septembre 2007 - Art. 3, V. Init.
NOR: DEVO0751699D
Voir sur Legifrance: http://www.legifrance.gouv.fr/affichTexte.do?cidTexte=JORFTEXT000000823796

--- a/Code Général Des Collectivités Territoriales/Partie Réglementaire/Deuxieme Partie/Livre II/Titre II/Article R2224-19-10.md
+++ b/Code Général Des Collectivités Territoriales/Partie Réglementaire/Deuxieme Partie/Livre II/Titre II/Article R2224-19-10.md
@@ -1,4 +1,4 @@
-Article R2333-131
+Article R2224-19-10
 ----
 Le produit des redevances d'assainissement est affecté au financement des
 charges du service d'assainissement.
