--- a/Code Général Des Collectivités Territoriales/Partie Réglementaire/Deuxieme Partie/Livre V/Titre Ier/Article R2512-15-11.md
+++ b/Code Général Des Collectivités Territoriales/Partie Réglementaire/Deuxieme Partie/Livre V/Titre Ier/Article R2512-15-11.md
@@ -4,8 +4,8 @@ Les agents de la ville de Paris chargés d'un service de police peuvent constate
 par procès-verbal, en application des dispositions de l'article L. 2512-16 du
 présent code, lorsqu'elles sont commises sur le territoire de la commune de
 Paris et qu'elles ne nécessitent pas de leur part d'actes d'enquête, les
-contraventions prévues par le code pénal et énumérées par l'article R. 15-33-61
-du code de procédure pénale.
+contraventions prévues par le code pénal et énumérées par l'article R.
+15-33-29-3 du code de procédure pénale.
 
 Ils peuvent également constater par procès-verbal, conformément aux dispositions
 du premier alinéa de l'article L. 2512-16 du présent code, les contraventions
